# python-package-test

./: pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/swansone_uv_trusted_pub_test/: __init__.py  test.py
